--- a/InventoryManagement/appsettings.json
+++ b/InventoryManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=Rocky; Trusted_Connection=True; MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=.; Database=Inventory; Trusted_Connection=True; MultipleActiveResultSets=True",
     //"DefaultConnection": "Server=(LocalDb)\MSSQLLocalDB; Database=Rocky; Trusted_Connection=True; MultipleActiveResultSets=True"
   },
   "Logging": {
